@@ -62,11 +62,6 @@
 		#endif
 
 	/* Macros: */
-		#if !defined(__DOXYGEN__)
-			#define _GETADCMUXMASK2(x, y)       x ## y
-			#define _GETADCMUXMASK(x, y)        _GETADCMUXMASK2(x, y)
-		#endif
-
 		/** Programmer ID string, returned to the host during the CMD_SIGN_ON command processing. */
 		#define PROGRAMMER_ID              "AVRISP_MK2"
 
@@ -77,7 +72,7 @@
 		#define TimeoutTicksRemaining      GPIOR1
 
 		/** MUX mask for the VTARGET ADC channel number. */
-		#define VTARGET_ADC_CHANNEL_MASK   _GETADCMUXMASK(ADC_CHANNEL, VTARGET_ADC_CHANNEL)
+		#define VTARGET_ADC_CHANNEL_MASK   ADC_GET_CHANNEL_MASK(VTARGET_ADC_CHANNEL)
 
 	/* External Variables: */
 		extern uint32_t CurrentAddress;
